--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -363,6 +363,9 @@ if (LLVM_COMPILER_IS_GCC_COMPATIBLE)
   if (APPLE OR EMSCRIPTEN)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-common -Woverloaded-virtual -Wcast-qual -fno-strict-aliasing -Wno-long-long -Wall -W -Wno-unused-parameter -Wwrite-strings")
     if (EMSCRIPTEN)
+      # FIXME: This should be set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CPPINTEROP_EXTRA_WASM_FLAGS}")
+      # but -sSUPPORT_LONGJMP=wasm in the default option causes a warning in the Emscripten build of Googletest
+      # and as we treat warnings as errors in the ci, it causes the ci to fail.
       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fwasm-exceptions")
     endif ()
   else()
