--- a/unittests/CppInterOp/TestSharedLib/CMakeLists.txt
+++ b/unittests/CppInterOp/TestSharedLib/CMakeLists.txt
@@ -14,9 +14,14 @@ if (EMSCRIPTEN)
   set_target_properties(TestSharedLib
     PROPERTIES NO_SONAME 1
   )
+  target_compile_options(TestSharedLib
+    PUBLIC "SHELL: ${CPPINTEROP_EXTRA_WASM_FLAGS}"
+  )
+
   target_link_options(TestSharedLib
     PRIVATE "SHELL: -s WASM_BIGINT"
     PRIVATE "SHELL: -s SIDE_MODULE=1"
+    PUBLIC "SHELL: ${CPPINTEROP_EXTRA_WASM_FLAGS}"
   )
 endif()
 
